
OPTION(CURL_IS_STATIC "on if curl is a static lib " ON)
MARK_AS_ADVANCED(CURL_IS_STATIC)

IF(WIN32)
    SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:MSVCRT")
    IF(CURL_IS_STATIC)
        ADD_DEFINITIONS(-DCURL_STATICLIB)
        SET(TARGET_EXTERNAL_LIBRARIES ws2_32 winmm)
    ENDIF(CURL_IS_STATIC)
ENDIF(WIN32)

SET(TARGET_SRC 
    ReaderWriterWCS.cpp
    WCS11Source.cpp
)

SET(TARGET_H
    WCS11Source.h
)
SET(TARGET_PUBLIC_H ../../../../include/osgEarthDrivers/wcs/WCSOptions)
SET(TARGET_LIBRARIES_VARS)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../../include/osgEarthDrivers/wcs)

SETUP_PLUGIN(osgearth_wcs)
